[package]
name = "pulstream-plugin"
description = "Support crate for Pulstream containing plugin framework abstractions and utilities"
version = "0.1.0"
edition = "2021"

[dependencies]
jetstreamer.workspace = true
carbon-core.workspace = true
carbon-pumpfun-decoder.workspace = true
clickhouse.workspace = true

solana-instruction.workspace = true
solana-transaction-status.workspace = true
solana-signature.workspace = true
solana-program.workspace = true
solana-pubkey.workspace = true
solana-pubkey-carbon.workspace = true
solana-message.workspace = true

futures-util.workspace = true
serde.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
async-trait.workspace = true